# obliczenia_naukowe

./: CMakeLists.txt  main.cpp  nellspsv.cpp  nellspsv.h
